--- a/index.html
+++ b/index.html
@@ -391,13 +391,14 @@
                     <a href="publications">Publications</a>
                     <a href="research-papers">Research Papers</a>
                     <a href="seminars-conferences">Seminars & Conferences</a>
-                    <a href="academic-services">Academic Services</a>
                 </div>
             </div>
             <span class="separator">|</span>
             <a href="teaching">TEACHING</a>
             <span class="separator">|</span>
-            <a href="op-ed">OPED & BLOGS</a>
+            <a href="op-ed">OP-ED & BLOGS</a>
+            <span class="separator">|</span>
+            <a href="service">Services</a>
             <span class="separator">|</span>
         </div>
     </div>
