--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     <div class="n-header"></div>
     
     <div class="n-title">
-        <h1>FAIZ UR REHMAN</h1>
+        <h1>IJAZ AHMED</h1>
     </div>
     
     <!-- SECTION: AUTHORS -->
@@ -396,9 +396,9 @@
             <span class="separator">|</span>
             <a href="teaching">TEACHING</a>
             <span class="separator">|</span>
-            <a href="op-ed">OP-ED & BLOGS</a>
+            <a href="service">SERVICE</a>
             <span class="separator">|</span>
-            <a href="service">Services</a>
+            <a href="op-ed">OP-ED & BLOGS</a>
             <span class="separator">|</span>
         </div>
     </div>
