--- a/research.html
+++ b/research.html
@@ -176,7 +176,7 @@
     <div class="n-header"></div>
     
     <div class="n-title">
-        <h1>FAIZ UR REHMAN</h1>
+        <h1>IJAZ AHMED</h1>
     </div>
     
     <!-- SECTION: AUTHORS -->
@@ -186,18 +186,19 @@
             <a href="./">ABOUT</a>
             <span class="separator">|</span>
             <div class="dropdown">
-               <span class="dropdown-trigger">RESEARCH</span>
+                <span class="dropdown-trigger">RESEARCH</span>
                 <div class="dropdown-content">
                     <a href="publications">Publications</a>
                     <a href="research-papers">Research Papers</a>
                     <a href="seminars-conferences">Seminars & Conferences</a>
-                    <a href="academic-services">Academic Services</a>
                 </div>
             </div>
             <span class="separator">|</span>
             <a href="teaching">TEACHING</a>
             <span class="separator">|</span>
-            <a href="op-ed">OPED & BLOGS</a>
+            <a href="service">SERVICE</a>
+            <span class="separator">|</span>
+            <a href="op-ed">OP-ED & BLOGS</a>
             <span class="separator">|</span>
         </div>
     </div>
