--- a/service.html
+++ b/service.html
@@ -192,14 +192,14 @@
     <div class="n-header"></div>
     
     <div class="n-title">
-        <h1>FAIZ UR REHMAN</h1>
+        <h1>IJAZ AHMED</h1>
     </div>
     
     <!-- SECTION: AUTHORS -->
     <div class="n-byline">
         <div class="byline">
             <span class="separator">|</span>
-            <a href="index.html">ABOUT</a>
+            <a href="./">ABOUT</a>
             <span class="separator">|</span>
             <div class="dropdown">
                 <span class="dropdown-trigger">RESEARCH</span>
@@ -207,13 +207,14 @@
                     <a href="publications">Publications</a>
                     <a href="research-papers">Research Papers</a>
                     <a href="seminars-conferences">Seminars & Conferences</a>
-                    <a href="academic-services">Academic Services</a>
                 </div>
             </div>
             <span class="separator">|</span>
             <a href="teaching">TEACHING</a>
             <span class="separator">|</span>
-            <a href="op-ed">OPED & BLOGS</a>
+            <a href="service">SERVICE</a>
+            <span class="separator">|</span>
+            <a href="op-ed">OP-ED & BLOGS</a>
             <span class="separator">|</span>
         </div>
     </div>
