--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="media/favicon-196x196.png" rel="shortcut icon" />
-    <title>Faiz Ur Rehman - Academic Services</title>
+    <title>Ijaz Ahmed - Academic Services</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
