--- a/opinion.html
+++ b/opinion.html
@@ -176,7 +176,7 @@
     <div class="n-header"></div>
     
     <div class="n-title">
-        <h1>FAIZ UR REHMAN</h1>
+        <h1>IJAZ AHMED</h1>
     </div>
     
     <!-- SECTION: AUTHORS -->
