--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             <div class="image-text--image">
                 <img src="media/image.jpg" class="faiz-image">
                 <div class="social-links">
-                    <a href="https://ibacity-my.sharepoint.com/:b:/g/personal/faizrehman_iba_edu_pk/EarGFrOF189AqmVkCNLqhcIBW75Tzs5JbGaxEsDn7IQkpQ?e=KGDkb8" target="_blank" title="Download CV">
+                    <a href="files/Ahmad_CV.pdf" target="_blank" title="Download CV">
                         <i class="fas fa-file-pdf"></i>
                     </a>
                     <a href="#" onclick="showEmailPopup()" class="email-link" title="Email"> 
