--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="media/favicon-196x196.png" rel="shortcut icon" />
-    <title>Ijaz Ahmed</title>
+    <title>Faiz Ur Rehman</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <head>
     <style>
@@ -376,7 +376,7 @@
     <div class="n-header"></div>
     
     <div class="n-title">
-        <h1>IJAZ AHMED</h1>
+        <h1>FAIZ UR REHMAN</h1>
     </div>
     
     <!-- SECTION: AUTHORS -->
@@ -391,14 +391,13 @@
                     <a href="publications">Publications</a>
                     <a href="research-papers">Research Papers</a>
                     <a href="seminars-conferences">Seminars & Conferences</a>
+                    <a href="academic-services">Academic Services</a>
                 </div>
             </div>
             <span class="separator">|</span>
             <a href="teaching">TEACHING</a>
             <span class="separator">|</span>
-            <a href="service">SERVICE</a>
-            <span class="separator">|</span>
-            <a href="op-ed">OP-ED & BLOGS</a>
+            <a href="op-ed">OPED & BLOGS</a>
             <span class="separator">|</span>
         </div>
     </div>
@@ -470,13 +469,6 @@
                     <div>
                         <strong>IBA Email</strong>
                         <p>faizrehman@iba.edu.pk</p>
-                    </div>
-                </a>
-                <a href="mailto:faizeconomist1@gmail.com" class="email-option">
-                    <i class="fa-solid fa-envelope"></i>
-                    <div>
-                        <strong>Gmail</strong>
-                        <p>faizeconomist1@gmail.com</p>
                     </div>
                 </a>
             </div>
