--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             <span class="close">&times;</span>
             <h3>Contact Email</h3>
             <div class="email-options">
-                <a href="mailto:faizrehman@iba.edu.pk" class="email-option">
+                <a href="mailto:ijaz.ahmadg37@gmail.com" class="email-option">
                     <i class="fa-solid fa-university"></i>
                     <div>
                         <strong>IBA Email</strong>
