--- a/index.html
+++ b/index.html
@@ -397,7 +397,9 @@
             <span class="separator">|</span>
             <a href="teaching">TEACHING</a>
             <span class="separator">|</span>
-            <a href="op-ed">OPED & BLOGS</a>
+            <a href="service">SERVICE</a>
+            <span class="separator">|</span>
+            <a href="op-ed">OP-ED & BLOGS</a>
             <span class="separator">|</span>
         </div>
     </div>
