--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     <div class="n-header"></div>
     
     <div class="n-title">
-        <h1>FAIZ UR REHMAN</h1>
+        <h1>IJAZ AHMAD</h1>
     </div>
     
     <!-- SECTION: AUTHORS -->
@@ -470,7 +470,7 @@
                     <i class="fa-solid fa-university"></i>
                     <div>
                         <strong>IBA Email</strong>
-                        <p>faizrehman@iba.edu.pk</p>
+                        <p>ijaz.ahmadg37@gmail.com</p>
                     </div>
                 </a>
             </div>
