--- a/teaching.html
+++ b/teaching.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="media/favicon-196x196.png" rel="shortcut icon" />
-    <title>Ijaz Ahmed - Teaching</title>
+    <title>Ijaz Ahmad - Teaching</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -179,7 +179,7 @@
     <div class="n-header"></div>
     
     <div class="n-title">
-        <h1>IJAZ AHMED</h1>
+        <h1>IJAZ AHMAD</h1>
     </div>
     
     <!-- SECTION: AUTHORS -->
