--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 <a href="mailto:ijaz.ahmadg37@gmail.com" class="email-option">
                     <i class="fa-solid fa-university"></i>
                     <div>
-                        <strong>IBA Email</strong>
+                        <strong>Gmail</strong>
                         <p>ijaz.ahmadg37@gmail.com</p>
                     </div>
                 </a>
