--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     <a href="#" onclick="showEmailPopup()" class="email-link" title="Email"> 
                         <i class="fa-solid fa-envelope"></i>
                     </a>
-                    <a href="https://scholar.google.com/citations?user=wpZKXggAAAAJ&hl=en" target="_blank" title="Google Scholar">
+                    <a href="https://scholar.google.com/citations?user=iHPyx6IAAAAJ&hl=en" target="_blank" title="Google Scholar">
                         <i class="fas fa-graduation-cap"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/faiz-ur-rehman-74ba33b7/" class="contact-item linkedin-link" target="_blank">
