--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     <a href="https://scholar.google.com/citations?user=iHPyx6IAAAAJ&hl=en" target="_blank" title="Google Scholar">
                         <i class="fas fa-graduation-cap"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/faiz-ur-rehman-74ba33b7/" class="contact-item linkedin-link" target="_blank">
+                    <a href="https://www.linkedin.com/in/ijazag7348/" class="contact-item linkedin-link" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
                     <a href="https://x.com/faiz_economist?lang=en" target="_blank" title="Twitter/X">
