--- a/op-ed.html
+++ b/op-ed.html
@@ -227,9 +227,9 @@
             
             <div class="op-ed-item"> 
                 <p>
-                    <a href="https://pakobserver.net/cost-of-elite-capture-and-pakistans-stalled-progress/" target="_blank">
-                        Cost of Elite Capture and Pakistan's Stalled Progress</a>, 
-                    September 3, 2025, 
+                    <a href="https://www.researchgate.net/publication/395492096_Governance_Choosing_the_HEC_Chairperson" target="_blank">
+                        Governance: Choosing the HEC Chairperson</a>, 
+                    September 14, 2025, 
                     <em>Pakistan Observer</em>
                 </p>
             </div>
