--- a/op-ed.html
+++ b/op-ed.html
@@ -230,7 +230,7 @@
                     <a href="https://www.researchgate.net/publication/395492096_Governance_Choosing_the_HEC_Chairperson" target="_blank">
                         Governance: Choosing the HEC Chairperson</a>, 
                     September 14, 2025, 
-                    <em>Pakistan Observer</em>
+                    <em>DAWN</em>
                 </p>
             </div>
         </div>
