--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
   </p>
   
   <p>
-    I hold a <strong>PhD in Economics</strong> from the 
+    I hold a <strong>PhD in Higher Education Administration</strong> from the 
     <a href="https://edle-phd.eu/" target="_blank" rel="noopener noreferrer" aria-label="European Doctorate in Law and Economics (opens in a new tab)">
       Universities of Bologna, Hamburg, and Erasmus Rotterdam
     </a>, awarded through the Erasmus Mundus fellowship as part of the prestigious 
