--- a/index.html
+++ b/index.html
@@ -439,9 +439,9 @@
   </p>
   
   <p>
-    I hold a <strong>PhD in Higher Education Administration</strong> from the 
+    I hold a <strong>PhD in Higher Education Administration</strong> from 
     <a href="https://edle-phd.eu/" target="_blank" rel="noopener noreferrer" aria-label="European Doctorate in Law and Economics (opens in a new tab)">
-      Universities of Bologna, Hamburg, and Erasmus Rotterdam
+      the University of Georgia
     </a>, awarded through the Erasmus Mundus fellowship as part of the prestigious 
     European Doctorate in Law and Economics (EDLE) program. 
     Before joining IBA in 2021, I served as an Assistant Professor at 
