--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <a href="https://www.linkedin.com/in/ijazag7348/" class="contact-item linkedin-link" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://x.com/ijazahmad12?lang=en" target="_blank" title="Twitter/X">
+                    <a href="https://x.com/faiz_economist?lang=en" target="_blank" title="Twitter/X">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
@@ -439,9 +439,9 @@
   </p>
   
   <p>
-    I hold a <strong>PhD in Higher Education Administration</strong> from 
+    I hold a <strong>PhD in Economics</strong> from the 
     <a href="https://edle-phd.eu/" target="_blank" rel="noopener noreferrer" aria-label="European Doctorate in Law and Economics (opens in a new tab)">
-      the University of Georgia
+      Universities of Bologna, Hamburg, and Erasmus Rotterdam
     </a>, awarded through the Erasmus Mundus fellowship as part of the prestigious 
     European Doctorate in Law and Economics (EDLE) program. 
     Before joining IBA in 2021, I served as an Assistant Professor at 
