--- a/index.html
+++ b/index.html
@@ -430,16 +430,7 @@
   <p><strong>Welcome to My Academic Homepage!</strong></p>
   
   <p>
-    I am a <strong>Professor of Economics</strong> at the 
-    <a href="https://www.iba.edu.pk" target="_blank" rel="noopener noreferrer" aria-label="Institute of Business Administration Karachi (opens in a new tab)">
-      Institute of Business Administration (IBA), Karachi
-    </a>. 
-    My research focuses on applied economics, particularly in the areas of 
-    <em>political economy</em>, the <em>economics of conflict</em> &amp; <em>terrorism</em>.
-  </p>
-  
-  <p>
-    I hold a <strong>PhD in Economics</strong> from the 
+    I hold a <strong>PhD in Higher Education Administration </strong> from the 
     <a href="https://edle-phd.eu/" target="_blank" rel="noopener noreferrer" aria-label="European Doctorate in Law and Economics (opens in a new tab)">
       Universities of Bologna, Hamburg, and Erasmus Rotterdam
     </a>, awarded through the Erasmus Mundus fellowship as part of the prestigious 
