--- a/index.html
+++ b/index.html
@@ -427,25 +427,18 @@
                 </div>
             </div>
             <div class="content-section">
-  <p><strong>Welcome to My Academic Homepage!</strong></p>
-  
-  <p>
-    I hold a <strong>PhD in Higher Education Administration </strong> from the 
-    <a href="https://www.uga.edu/" target="_blank" rel="noopener noreferrer" aria-label="European Doctorate in Law and Economics (opens in a new tab)">
-      Universities of Bologna, Hamburg, and Erasmus Rotterdam
-    </a>, awarded through the Erasmus Mundus fellowship as part of the prestigious 
-    European Doctorate in Law and Economics (EDLE) program. 
-    Before joining IBA in 2021, I served as an Assistant Professor at 
-    <a href="https://www.qu.edu.pk" target="_blank" rel="noopener noreferrer" aria-label="Quaid-i-Azam University (opens in a new tab)">
-      Quaid-i-Azam University, Islamabad
-    </a>.
-  </p>
-  
-  <p>
-    <strong>Research Fields:</strong> Political Economy, Economics of Conflict &amp; Terrorism, Development Economics
-  </p>
-</div>
-
+                <p><strong>Welcome to My Academic Homepage!</strong></p>
+                
+                <p>
+                    I hold a <strong>PhD in Higher Education Administration</strong> from the 
+                    <a href="https://www.uga.edu/" target="_blank" rel="noopener noreferrer">
+                        University of Georgia, Athens.
+                    </a>
+                </p>
+                
+                <p>
+                    <strong>Research Fields:</strong> Policy Analysis, Advocacy, Institutional Change, Higher Education Funding, Governance, Quality Assurance, Policy Diffusion
+                </p>
             </div>
         </div>
     </div>
