--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     I hold a <strong>PhD in Higher Education Administration</strong> from the 
                     <a href="https://www.uga.edu/" target="_blank" rel="noopener noreferrer">
                         University of Georgia, Athens.
-                    </a>
+                    </a> My supervisor was Professor James C Hearn.
                 </p>
                 
                 <p>
