--- a/publications.html
+++ b/publications.html
@@ -232,7 +232,7 @@
     <!-- SECTION: MAIN BODY -->
     <div class="n-article">
         <div class="publications-section">
-            <h2>SELECTED PUBLICATIONS</h2>
+            <h2>JOURNAL ARTICLES & PUBLICATIONS</h2>
             
             <div class="publication-item">
                 <p><b>Governance: Choosing the HEC Chairperson</b><br>
@@ -243,38 +243,10 @@
             </div>
 
             <div class="publication-item">
-                <p><b>Construction of an Intersectionality Scale for Black Undergraduate Women in Computing</b><br>
-                SR Krystal L. Williams, Ijaz Ahmad, William Walker, Imani Callan, Lilly Steiner<br>
-                <em>2024 Black Issues in Computing Education (BICE) Symposium</em><br>
-                2024</p>
-            </div>
-
-            <div class="publication-item">
-                <p><b>Hidden Barriers: Graduate Students in STEM & Possible Obstructions to Researcher Identification</b><br>
-                K Williams, K.L., & Ahmad, I. Waisome, J., McMullen<br>
-                <em>2024 AERA Annual Meeting</em><br>
-                2024</p>
-            </div>
-
-            <div class="publication-item">
-                <p><b>Emerging Work on Tertiary Policy Diffusion in Western Europe and North America</b><br>
-                JC Hearn, I Ahmad<br>
-                <em>Comparative Higher Education Politics: Policymaking in North America and Europe</em><br>
-                2023</p>
-            </div>
-
-            <div class="publication-item">
                 <p><b>From an entrepreneurial university to a sustainable entrepreneurial university: Conceptualization and evidence in the contexts of European university reforms</b><br>
                 Y Cai, I Ahmad<br>
                 <em>Higher Education Policy</em> 36 (1), 20-52<br>
                 2023</p>
-            </div>
-
-            <div class="publication-item">
-                <p><b>A Conceptual Framework for Understanding Adoption and Diffusion of Performance-Based Funding in European Higher Education</b><br>
-                I Ahmad, JC Hearn<br>
-                <em>36th European Group for Organizational Studies (EGOS) Colloquium Hamburg</em><br>
-                2020</p>
             </div>
 
             <div class="publication-item">
@@ -302,6 +274,38 @@
                 <p><b>Public Service Motivation: Incidents and Antecedents in Pakistan</b><br>
                 I Ahmad<br>
                 2018</p>
+            </div>
+
+            <h2 style="margin-top: 40px;">BOOK CHAPTERS</h2>
+
+            <div class="publication-item">
+                <p><b>Emerging Work on Tertiary Policy Diffusion in Western Europe and North America</b><br>
+                JC Hearn, I Ahmad<br>
+                <em>Comparative Higher Education Politics: Policymaking in North America and Europe</em><br>
+                2023</p>
+            </div>
+
+            <h2 style="margin-top: 40px;">CONFERENCE PRESENTATIONS</h2>
+
+            <div class="publication-item">
+                <p><b>Construction of an Intersectionality Scale for Black Undergraduate Women in Computing</b><br>
+                SR Krystal L. Williams, Ijaz Ahmad, William Walker, Imani Callan, Lilly Steiner<br>
+                <em>2024 Black Issues in Computing Education (BICE) Symposium</em><br>
+                2024</p>
+            </div>
+
+            <div class="publication-item">
+                <p><b>Hidden Barriers: Graduate Students in STEM & Possible Obstructions to Researcher Identification</b><br>
+                K Williams, K.L., & Ahmad, I. Waisome, J., McMullen<br>
+                <em>2024 AERA Annual Meeting</em><br>
+                2024</p>
+            </div>
+
+            <div class="publication-item">
+                <p><b>A Conceptual Framework for Understanding Adoption and Diffusion of Performance-Based Funding in European Higher Education</b><br>
+                I Ahmad, JC Hearn<br>
+                <em>36th European Group for Organizational Studies (EGOS) Colloquium Hamburg</em><br>
+                2020</p>
             </div>
 
         </div>
