--- a/research.html
+++ b/research.html
@@ -220,7 +220,7 @@
                     <a href="publications">Publications</a>
                     <a href="research-papers">Research Papers</a>
                     <a href="seminars-conferences">Seminars & Conferences</a>
-                    <a href="#data-dashboards">Data Dashboards</a>
+                    <a href="data-dashboards">Data Dashboards</a>
                 </div>
             </div>
             <span class="separator">|</span>
