--- a/teaching.html
+++ b/teaching.html
@@ -205,8 +205,8 @@
     </div>
     
     <!-- SECTION: MAIN BODY -->
-    <div class="n-article">
-        <p style="margin-bottom: 25px; font-style: italic;">I served as a teaching assistant in the following courses.</p>
+    <div class="simple-course">
+        <p> I served as a teaching assistant in the following courses. </p>
         
         <div class="simple-course">
             <p>
