--- a/teaching.html
+++ b/teaching.html
@@ -207,7 +207,7 @@
     <!-- SECTION: MAIN BODY -->
     <div class="n-article">
         <p style="margin-bottom: 35px;">
-            I served as a teaching assistant in the following courses.
+            I served as a teaching assistant in the following courses:
         </p>
         
         <div class="simple-course">
