--- a/powerbi.html
+++ b/powerbi.html
@@ -77,9 +77,9 @@
         }
 
         .n-article {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 30px 40px;
+            width: 100%;
+            margin: 0;
+            padding: 0;
         }
 
         /* Dropdown Styles */
@@ -135,12 +135,19 @@
         }
 
         .powerbi-container {
-            margin: 40px 0;
-            text-align: center;
+            width: 100%;
+            height: calc(100vh - 200px);
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .powerbi-container iframe {
-            max-width: 100%;
+            width: 95%;
+            height: 100%;
+            min-height: 600px;
             border: 1px solid #eee;
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -148,7 +155,7 @@
 
         @media (max-width: 768px) {
             .n-article {
-                padding: 20px;
+                padding: 0;
             }
 
             .n-title h1 {
@@ -172,9 +179,15 @@
                 min-width: 250px;
             }
 
+            .powerbi-container {
+                padding: 10px;
+                height: calc(100vh - 250px);
+            }
+
             .powerbi-container iframe {
                 width: 100%;
-                height: 400px;
+                height: 100%;
+                min-height: 400px;
             }
         }
     </style>
@@ -214,8 +227,6 @@
         <div class="powerbi-container">
             <iframe 
                 title="Funding Disparity in NIFA Funding-02" 
-                width="600" 
-                height="373.5" 
                 src="https://app.powerbi.com/view?r=eyJrIjoiNjhiZDI1Y2EtZDIxMS00NDhhLThiOWItMGUwZjFlOTUxMjk1IiwidCI6IjAzNWRkZWY2LTI0MzMtNDhiNi04NTI2LTcwY2E4MTgxZjc2ZCIsImMiOjN9" 
                 frameborder="0" 
                 allowFullScreen="true">
