--- a/research.html
+++ b/research.html
@@ -221,6 +221,7 @@
                     <a href="research-papers">Research Papers</a>
                     <a href="seminars-conferences">Seminars & Conferences</a>
                     <a href="data-dashboards">Data Dashboards</a>
+                    <a href="powerbi">Data Dashboards</a>
                 </div>
             </div>
             <span class="separator">|</span>
