--- a/op-ed.html
+++ b/op-ed.html
@@ -208,6 +208,7 @@
                     <a href="publications">Publications</a>
                     <a href="research-papers">Research Papers</a>
                     <a href="seminars-conferences">Seminars & Conferences</a>
+                    <a href="powerbi">Data Dashboards</a>
                 </div>
             </div>
             <span class="separator">|</span>
