--- a/powerbi.html
+++ b/powerbi.html
@@ -214,7 +214,7 @@
                 </div>
             </div>
             <span class="separator">|</span>
-            <a href="powerbi">TEACHING</a>
+            <a href="teaching">TEACHING</a>
             <span class="separator">|</span>
             <a href="service">SERVICE</a>
             <span class="separator">|</span>
