--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     <a href="https://www.linkedin.com/in/ijazag7348/" class="contact-item linkedin-link" target="_blank">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://x.com/faiz_economist?lang=en" target="_blank" title="Twitter/X">
+                    <a href="https://x.com/IjazAhmad12?lang=en" target="_blank" title="Twitter/X">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
