--- a/research.html
+++ b/research.html
@@ -142,7 +142,7 @@
             font-size: 1.4em;
             color: #333;
             margin-bottom: 20px;
-            font-weight: 600;
+            font-weight: normal;
         }
 
         .dashboard-wrapper {
