--- a/teaching.html
+++ b/teaching.html
@@ -139,9 +139,16 @@
             padding: 0;
         }
 
+        .intro-text {
+            margin-bottom: 35px;
+            font-size: 1.3em;
+            line-height: 1.8;
+            color: #333;
+        }
+
         .simple-course p {
             margin: 0;
-            font-size: 1.1em;
+            font-size: 1.3em;
             line-height: 1.8;
             color: #333;
         }
@@ -206,7 +213,7 @@
     
     <!-- SECTION: MAIN BODY -->
     <div class="n-article">
-        <p style="margin-bottom: 35px;">
+        <p class="intro-text">
             I served as a teaching assistant in the following courses:
         </p>
         
