--- a/publications.html
+++ b/publications.html
@@ -234,78 +234,74 @@
         <div class="publications-section">
             <h2>JOURNAL ARTICLES & PUBLICATIONS</h2>
             
-            <div class="publication-item">
-                <p><b>Governance: Choosing the HEC Chairperson</b><br>
-                I Ahmed<br>
-                <em>Dawn</em><br>
-                <a href="https://www.dawn.com/news/1941710" target="_blank">https://www.dawn.com/news/1941710</a><br>
-                2025</p>
-            </div>
-
-            <div class="publication-item">
-                <p><b>From an entrepreneurial university to a sustainable entrepreneurial university: Conceptualization and evidence in the contexts of European university reforms</b><br>
+<div class="publication-item">
+                <p>From an entrepreneurial university to a sustainable entrepreneurial university: Conceptualization and evidence in the contexts of European university reforms<br>
                 Y Cai, I Ahmad<br>
                 <em>Higher Education Policy</em> 36 (1), 20-52<br>
                 2023</p>
             </div>
 
             <div class="publication-item">
-                <p><b>Exploring principal-agent theory in higher education research</b><br>
+                <p>Exploring principal-agent theory in higher education research<br>
                 A Yallew, H Juusola, I Ahmad, S Törmälä<br>
                 <em>Journal of Research and Innovation in Higher Education</em> 3 (1), 78-98<br>
                 2018</p>
             </div>
 
             <div class="publication-item">
-                <p><b>Understanding university-society engagement for innovation: The role of individual actors in institutionalizing the regenerative medicine research field in University of Tampere</b><br>
+                <p>Understanding university-society engagement for innovation: The role of individual actors in institutionalizing the regenerative medicine research field in University of Tampere<br>
                 I Ahmad<br>
                 <a href="https://andor.tuni.fi/permalink/358FIN_TAMPO/1j3mh4m/alma9911749865105973" target="_blank">Tampere University Repository</a><br>
                 2018</p>
             </div>
 
             <div class="publication-item">
-                <p><b>Understanding university-society engagement for innovation: the role of individual actors in institutionalizing the regenerative medicine research field in University of Tampere</b><br>
+                <p>Understanding university-society engagement for innovation: the role of individual actors in institutionalizing the regenerative medicine research field in University of Tampere<br>
                 I Ahmad<br>
                 <em>Tampere University, Finland</em><br>
                 2018</p>
             </div>
 
             <div class="publication-item">
-                <p><b>Public Service Motivation: Incidents and Antecedents in Pakistan</b><br>
+                <p>Public Service Motivation: Incidents and Antecedents in Pakistan<br>
                 I Ahmad<br>
                 2018</p>
             </div>
-
+            
             <h2 style="margin-top: 40px;">BOOK CHAPTERS</h2>
 
             <div class="publication-item">
-                <p><b>Emerging Work on Tertiary Policy Diffusion in Western Europe and North America</b><br>
-                JC Hearn, I Ahmad<br>
-                <em>Comparative Higher Education Politics: Policymaking in North America and Europe</em><br>
+                <p>From an entrepreneurial university to a sustainable entrepreneurial university: Conceptualization and evidence in the contexts of European university reforms<br>
+                Y Cai, I Ahmad<br>
+                <em>Higher Education Policy</em> 36 (1), 20-52<br>
                 2023</p>
             </div>
 
-            <h2 style="margin-top: 40px;">CONFERENCE PRESENTATIONS</h2>
-
             <div class="publication-item">
-                <p><b>Construction of an Intersectionality Scale for Black Undergraduate Women in Computing</b><br>
-                SR Krystal L. Williams, Ijaz Ahmad, William Walker, Imani Callan, Lilly Steiner<br>
-                <em>2024 Black Issues in Computing Education (BICE) Symposium</em><br>
-                2024</p>
+                <p>Exploring principal-agent theory in higher education research<br>
+                A Yallew, H Juusola, I Ahmad, S Törmälä<br>
+                <em>Journal of Research and Innovation in Higher Education</em> 3 (1), 78-98<br>
+                2018</p>
             </div>
 
             <div class="publication-item">
-                <p><b>Hidden Barriers: Graduate Students in STEM & Possible Obstructions to Researcher Identification</b><br>
-                K Williams, K.L., & Ahmad, I. Waisome, J., McMullen<br>
-                <em>2024 AERA Annual Meeting</em><br>
-                2024</p>
+                <p>Understanding university-society engagement for innovation: The role of individual actors in institutionalizing the regenerative medicine research field in University of Tampere<br>
+                I Ahmad<br>
+                <a href="https://andor.tuni.fi/permalink/358FIN_TAMPO/1j3mh4m/alma9911749865105973" target="_blank">Tampere University Repository</a><br>
+                2018</p>
             </div>
 
             <div class="publication-item">
-                <p><b>A Conceptual Framework for Understanding Adoption and Diffusion of Performance-Based Funding in European Higher Education</b><br>
-                I Ahmad, JC Hearn<br>
-                <em>36th European Group for Organizational Studies (EGOS) Colloquium Hamburg</em><br>
-                2020</p>
+                <p>Understanding university-society engagement for innovation: the role of individual actors in institutionalizing the regenerative medicine research field in University of Tampere<br>
+                I Ahmad<br>
+                <em>Tampere University, Finland</em><br>
+                2018</p>
+            </div>
+
+            <div class="publication-item">
+                <p>Public Service Motivation: Incidents and Antecedents in Pakistan<br>
+                I Ahmad<br>
+                2018</p>
             </div>
 
         </div>
