--- a/index.html
+++ b/index.html
@@ -437,6 +437,15 @@
                 </p>
                 
                 <p>
+                    I also hold a <strong>Master's in Research & Innovation in Higher Education (MARIHE)</strong> from 
+                    <a href="https://www.tuni.fi/en" target="_blank" rel="noopener noreferrer">
+                        Tampere University (Finland).
+                    </a> This program was jointly offered by Tampere University (Finland), Danube University Krems (Austria), 
+                    Osnabrück University of Applied Sciences (Germany), and Beijing Normal University (China), and was 
+                    sponsored by the European Erasmus Mundus Scholarship Program.
+                </p>
+                
+                <p>
                     <strong>Research Fields:</strong> Policy Analysis, Advocacy, Institutional Change, Higher Education Funding, Governance, Quality Assurance, Policy Diffusion
                 </p>
             </div>
